mpg123: cleaned up comments, formatting, and logging lines

also replaced mpg123decoder->handle != NULL checks with asserts

https://bugzilla.gnome.org/show_bug.cgi?id=686595